<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Dashboard"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View
            android:id="@+id/rectangle_53"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rectangle_53_shape" />
        <TextView android:id="@+id/dateHome"
            android:fontFamily="@font/allerta"
            android:textSize="14sp"
            android:textColor="@color/corona_virus_cases_color"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="18dp"
            android:layout_width="159dp"
            android:layout_height="22dp"
            android:text="@string/mar_22__2020__12_48_gmt_string"
            />
        <TextView android:id="@+id/corona_virus_cases"
            android:fontFamily="@font/allerta"
            android:textSize="23sp"
            android:textColor="@color/corona_virus_cases_color"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="33dp"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="Corona Virus Cases "
            />
        <TextView android:id="@+id/totalcountHome"
        android:fontFamily="@font/allerta"
        android:textSize="50sp"
        android:textColor="@color/corona_virus_cases_color"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:layout_width="178dp"
        android:layout_height="77dp"
        android:text="@string/_316_067_string"
        />
        <TextView android:id="@+id/districtNameHome"
            android:fontFamily="@font/allerta"
            android:textSize="30sp"
            android:textColor="@color/corona_virus_cases_color"
            android:layout_marginLeft="216dp"
            android:layout_marginTop="74dp"
            android:layout_width="178dp"
            android:layout_height="77dp"
            android:text="Jdh"
            />

        <View android:id="@+id/rectangle_54"
            android:background="@drawable/rectangle_54_shape"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="150dp"
            android:layout_width="166dp"
            android:layout_height="122dp" />
        <TextView android:id="@+id/deaths"
            android:fontFamily="@font/allerta"
            android:textSize="14sp"
            android:textColor="@color/deaths_color"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="165dp"
            android:layout_width="55dp"
            android:layout_height="22dp"
            android:text="@string/deaths_string"
            />

        <TextView android:id="@+id/deathcountHome"
            android:fontFamily="@font/allerta"
            android:textSize="40sp"
            android:textColor="@color/_13_598_color"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="180dp"
            android:layout_width="121dp"
            android:layout_height="61dp"
            android:text="@string/_13_598_string"
            />
        <TextView android:id="@+id/deltadeath"
            android:fontFamily="@font/allerta"
            android:textSize="14sp"
            android:textColor="@color/deaths_color"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="245dp"
            android:layout_width="55dp"
            android:layout_height="22dp"
            android:text="@string/deaths_string"
            android:drawableStart="@drawable/deltainc"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/rectangle_55"
            android:layout_width="166dp"
            android:layout_height="122dp"
            android:layout_marginStart="212dp"
            android:layout_marginLeft="212dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/rectangle_54_shape" />

        <TextView
            android:id="@+id/recovered"
            android:layout_width="80dp"
            android:layout_height="22dp"
            android:layout_marginLeft="231dp"
            android:layout_marginTop="165dp"
            android:fontFamily="@font/allerta"
            android:text="@string/recovered_string"
            android:textColor="@color/deaths_color"
            android:textSize="14sp" />

        <TextView android:id="@+id/recoveredcountHome"
            android:fontFamily="@font/allerta"
            android:textSize="40sp"
            android:textColor="@color/_95_892_color"
            android:layout_marginLeft="231dp"
            android:layout_marginTop="180dp"
            android:layout_width="121dp"
            android:layout_height="61dp"
            android:text="@string/_95_892_string"
            />
        <TextView android:id="@+id/deltarecovered"
            android:fontFamily="@font/allerta"
            android:textSize="14sp"
            android:textColor="@color/deaths_color"
            android:layout_marginLeft="234dp"
            android:layout_marginTop="245dp"
            android:layout_width="55dp"
            android:layout_height="22dp"
            android:text="@string/deaths_string"
            android:drawableStart="@drawable/deltadec"
            android:visibility="invisible"


            />
        <View android:id="@+id/rectangle_56"
            android:background="@drawable/rectangle_56_shape"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="300dp"
            android:layout_width="342dp"
            android:layout_height="90dp" />

        <RelativeLayout android:id="@+id/group_11"
            android:layout_marginTop="310dp"
            android:layout_marginStart="56dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
            <TextView android:id="@+id/active_cases"
                android:fontFamily="@font/allerta"
                android:textSize="14sp"
                android:textColor="@color/deaths_color"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:layout_width="93dp"
                android:layout_height="22dp"
                android:text="@string/active_cases_string"
                />
            <TextView android:id="@+id/deltaactive"
                android:fontFamily="@font/allerta"
                android:textSize="14sp"
                android:textColor="@color/deaths_color"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="0dp"
                android:drawableStart="@drawable/deltainc"
                android:layout_width="93dp"
                android:layout_height="22dp"
                android:text="@string/active_cases_string"
                android:visibility="invisible"

                />

            <TextView android:id="@+id/activecountHome"
                android:fontFamily="@font/allerta"
                android:textSize="40sp"
                android:textColor="@color/_206_577_color"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="14dp"
                android:layout_width="143dp"
                android:layout_height="61dp"
                android:text="@string/_206_577_string"
                />




        </RelativeLayout>
        <View
            android:background="@drawable/rectangle_56_shape"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="410dp"
            android:layout_width="342dp"
            android:layout_height="90dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginStart="56dp"

            >

            <TextView android:id="@+id/zoneHome"
                android:fontFamily="@font/allerta"
                android:textSize="14sp"
                android:textColor="@color/deaths_color"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="60dp"
                android:layout_width="98dp"
                android:layout_height="22dp"
                android:text="Zone"
                />

            <TextView
                android:id="@+id/zonedetailHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="84dp"
                android:fontFamily="@font/allerta"
                android:text="@string/_109_490_string"
                android:textColor="@color/_206_577_color"
                android:textSize="40sp" />





        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="530dp"
            >
        <View android:id="@+id/rectangle_57"
            android:background="@drawable/rectangle_56_shape"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="0dp"
            android:layout_width="342dp"
            android:layout_height="110dp" />
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/locationSearch"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/allerta"
                android:hint="Enter any City"
                android:textColor="@color/_206_577_color"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/searchImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/searchbtn" />

        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>




